# Python-Adv-Oops-Project

./: README.md
semantic_query_compressor/: .gitignore  README.md  example.txt  main.py  pyproject.toml
semantic_query_compressor/src/semantic_query_compressor/: __init__.py  cli.py  compressor.py  llm.py  pipeline.py  similarity.py  text_utils.py
semantic_query_compressor/tests/: test_pipeline.py
